objects/FLODocs__Flo_Scanner_Detect_Changes_Info__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Date_Scanner_Run__c</fullName>
        <label>Date Scanner Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Salesforce_Type__c</fullName>
        <label>Salesforce Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_Records_Scanned__c</fullName>
        <label>Total Records Scanned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_Records_Updated__c</fullName>
        <label>Total Records Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Flo Scanner Detect Changes Info</label>
    <nameField>
        <label>Flo Scanner Detect Changes Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flo Scanner Detect Changes Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>